feat: some style changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -203,7 +203,7 @@ const allPosts = await getCollection("posts");
   <div id="blog">
     <h2>Blog</h2>
 
-    <div class="flex flex-col gap-4 md:flex-row">
+    <div class="flex flex-col gap-16 md:gap-2 md:flex-row">
       <div class="flex flex-col gap-10 mt-8 md:w-3/5">
         {
           allPosts
