feat: some more style changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -122,10 +122,10 @@ const allPosts = await getCollection("posts");
 
         <div class="flex flex-row gap-2">
           <a href="https://github.com/zaida04">
-            <Github size={34} />
+            <Github size={34} aria-label="Github Icon" />
           </a>
           <a href="mailto:contact@nico.engineer">
-            <Mail size={34} />
+            <Mail size={34} aria-label="Mail Icon" />
           </a>
         </div>
 
