--- a/src/components/layouts/PageLayout.astro
+++ b/src/components/layouts/PageLayout.astro
@@ -3,22 +3,23 @@ import Layout from "./Layout.astro";
 import Navbar from "../nav/Navbar";
 
 interface Props {
-    title: string;
+  title: string;
+  description?: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
-<Layout title={title}>
-    <div class="flex justify-center mb-24 mx-6 md:mx-0">
-        <div class="w-full md:w-3/4">
-            <div class="mb-8">
-                <Navbar client:load />
-            </div>
+<Layout title={title} description={description}>
+  <div class="flex justify-center mb-24 mx-6 md:mx-0">
+    <div class="w-full md:w-3/4">
+      <div class="mb-8">
+        <Navbar client:load />
+      </div>
 
-            <div class="flex flex-col gap-20">
-                <slot />
-            </div>
-        </div>
+      <div class="flex flex-col gap-20">
+        <slot />
+      </div>
     </div>
+  </div>
 </Layout>
