feat: add color

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -27,6 +27,7 @@ const { title, description } = Astro.props;
     />
     <meta property="og:title" content={`${title} | Nico's Blog`} />
     <meta property="og:image" content={MyFace.src} />
+    <meta property="theme-color" content="#8f54a0" />
     <meta property="og:type" content="website" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/favicon.ico" />
