chore: description of blog

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,7 +171,13 @@ const allPosts = await getCollection("posts");
     </div>
 
     <div id="blog">
-      <h2>Blog</h2>
+      <div class="mb-2">
+        <h2>Blog</h2>
+        <p>
+          This is my little corner of the internet. Opinion pieces, tutorials,
+          learnings, and more.
+        </p>
+      </div>
 
       <div class="flex flex-col gap-16 md:gap-2 md:flex-row">
         <div class="flex flex-col gap-10 mt-8 md:w-3/5">
