--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import PageLayout from "../components/layouts/PageLayout.astro";
 import ProjectCard from "../components/project/ProjectCard";
 import CodingTime from "../components/coding_time/CodingTime.astro";
 import BlogCard from "../components/blog/BlogCard";
-import { ArrowUp, Github, Mail } from "lucide-react";
+import { ArrowUp, Github, Linkedin, Mail } from "lucide-react";
 import CompetitionCard from "../components/competition/CompetitionCard";
 import { getCollection } from "astro:content";
 import Link from "../components/Link";
@@ -103,6 +103,9 @@ const allPosts = await getCollection("posts");
         <div class="flex flex-row gap-2">
           <a href="https://github.com/zaida04">
             <Github size={34} aria-label="Github Icon" />
+          </a>
+          <a href="https://www.linkedin.com/in/zaid-arsh/">
+            <Linkedin size={34} aria-label="Linkedin Icon" />
           </a>
           <a href="mailto:contact@nico.engineer">
             <Mail size={34} aria-label="Mail Icon" />
