feat: add ub link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,6 +87,11 @@ const allPosts = await getCollection("posts");
             href={colors.adobe.url}
             className={colors.adobe.color}
             text="Adobe Creative Career"
+          />. I'm also a Teaching & Research Assistant at
+          <Link
+            text="University at Buffalo"
+            className={colors.ubuffalo.color}
+            href={colors.ubuffalo.url}
           />. Previously a Software Engineer Intern at
           <Link
             href={colors.mirage.url}
