--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,10 @@
 ---
 import { Image } from "astro:assets";
 import MyFace from "../static/imgs/my_face.png";
-import { projects_data } from "../content/data/projects";
 import { competitions_data } from "../content/data/competitions";
 import { wakatime_data } from "../content/data/wakatime";
 
 import PageLayout from "../components/layouts/PageLayout.astro";
-import ProjectCard from "../components/project/ProjectCard";
 import CodingTime from "../components/coding_time/CodingTime.astro";
 import BlogCard from "../components/blog/BlogCard";
 import { ArrowUp, Github, Linkedin, Mail } from "lucide-react";
@@ -23,8 +21,8 @@ const allPosts = await getCollection("posts");
 ---
 
 <PageLayout title="Zaid's Site">
-  <div id="home" class="flex flex-col md:flex-row">
-    <div class="flex flex-col gap-8 pr-8">
+  <div id="home" class="flex flex-col md:flex-row justify-between">
+    <div class="flex flex-col gap-6 md:max-w-[60%] pr-4 order-2 md:order-1">
       <!-- <Typing client:load text="Hello, I'm Zaid." /> -->
       <TypeAnimation
         client:load
@@ -35,7 +33,8 @@ const allPosts = await getCollection("posts");
 
       <div class="flex flex-col font-normal gap-4">
         <p class="leading-loose">
-          I build full-stack stuff™ using
+          I'm a full-stack Software Engineer with ~3 years of experience. I
+          build software using
           <Link
             href={colors.node.url}
             className={colors.node.color}
@@ -69,18 +68,11 @@ const allPosts = await getCollection("posts");
         </p>
 
         <p class="leading-loose">
-          I'm currently really interested in learning lower-level languages such
-          as
-          <Link
-            href={colors.rust.url}
-            className={colors.rust.color}
-            text="Rust"
-          /> and
-          <Link
-            href={colors.elixir.url}
-            className={colors.elixir.color}
-            text="Elixir"
-          />.
+          My software journey started at 12 years old, being introduced to
+          coding through my love of video games. Since then, I've built a
+          variety of products and software with one goal in mind:
+          <b class="font-semibold">making someone's life better</b>. Preferably,
+          a lot of someone's.
         </p>
 
         <p class="leading-loose">
@@ -88,8 +80,9 @@ const allPosts = await getCollection("posts");
           <Link
             href={colors.yoki.url}
             className={colors.yoki.color}
-            text="Yoki"
-          />. I'm also a Teaching & Research Assistant at
+            text="Yoki Labs"
+          />, building auto-moderation bots keeping 200k+ users safe. I'm also a
+          Teaching & Research Assistant at
           <Link
             text="University at Buffalo"
             className={colors.ubuffalo.color}
@@ -105,6 +98,17 @@ const allPosts = await getCollection("posts");
             className={colors.fiveable.color}
             text="Fiveable"
           />.
+        </p>
+
+        <p class="leading-loose">
+          I'm an advocate of open source software. I've maintained 10+ OSS
+          projects with 100k+ total downloads. My biggest project has been
+          <Link
+            href="https://github.com/guildedjs/guilded.js"
+            className="text-yellow-400 hover:underline"
+            text="Guilded.js"
+          />, used to build over a thousand bots for Guilded, making it the most
+          popular library on the platform.
         </p>
 
         <div class="flex flex-row gap-2">
@@ -138,18 +142,27 @@ const allPosts = await getCollection("posts");
       </div>
     </div>
 
-    <div class="flex flex-col gap-1 items-center">
-      <div
-        class="bg-slate-800/50 border-slate-800/50 border-4 h-fit p-2 rounded-xl"
-      >
-        <Image src={MyFace} alt="Zaid's Face" width={500} class="rounded-xl" />
-      </div>
-      <div
-        class="bg-slate-800/50 border-slate-800/50 border-2 h-fit w-fit p-2 rounded-xl"
-      >
-        <p class="flex gap-1 text-xs">
-          That's me! <ArrowUp size={16} />
-        </p>
+    <div
+      class="flex flex-col gap-1 items-center md:max-w-[35%] order-1 md:order-2 mb-8 md:mb-0"
+    >
+      <div class="sticky top-4">
+        <div
+          class="bg-slate-800/50 border-slate-800/50 border-4 h-fit p-2 rounded-xl max-w-[400px] md:max-w-[500px] w-full"
+        >
+          <Image
+            src={MyFace}
+            alt="Zaid's Face"
+            width={500}
+            class="rounded-xl w-full"
+          />
+        </div>
+        <div
+          class="bg-slate-800/50 border-slate-800/50 border-2 h-fit w-fit p-2 rounded-xl mt-1 mx-auto"
+        >
+          <p class="flex gap-1 text-xs">
+            That's me! <ArrowUp size={16} />
+          </p>
+        </div>
       </div>
     </div>
   </div>
