--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,8 +69,7 @@ const allPosts = await getCollection("posts");
 
         <p class="leading-loose">
           My software journey started at 12 years old, being introduced to
-          coding through my love of video games. Since then, I've built a
-          variety of products and software with one goal in mind:
+          coding through my love of video games. Since then, I've built software with one goal in mind:
           <b class="font-semibold">making someone's life better</b>. Preferably,
           a lot of someone's.
         </p>
@@ -81,7 +80,7 @@ const allPosts = await getCollection("posts");
             href={colors.yoki.url}
             className={colors.yoki.color}
             text="Yoki Labs"
-          />, building auto-moderation bots keeping 200k+ users safe. I'm also a
+          />, building moderation bots keeping 200k+ users safe. I'm also a
           Teaching & Research Assistant at
           <Link
             text="University at Buffalo"
@@ -101,13 +100,13 @@ const allPosts = await getCollection("posts");
         </p>
 
         <p class="leading-loose">
-          I'm an advocate of open source software. I've maintained 10+ OSS
+          On the side, I maintain 10+ open source
           projects with 100k+ total downloads. My biggest project has been
           <Link
             href="https://github.com/guildedjs/guilded.js"
             className="text-yellow-400 hover:underline"
             text="Guilded.js"
-          />, used to build over a thousand bots for Guilded, making it the most
+          />, used to build 1k+ bots for Guilded.gg, making it the most
           popular library on the platform.
         </p>
 
