--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,7 +69,8 @@ const allPosts = await getCollection("posts");
 
         <p class="leading-loose">
           My software journey started at 12 years old, being introduced to
-          coding through my love of video games. Since then, I've built software with one goal in mind:
+          coding through my love of video games. Since then, I've built software
+          with one goal in mind:
           <b class="font-semibold">making someone's life better</b>. Preferably,
           a lot of someone's.
         </p>
@@ -100,14 +101,14 @@ const allPosts = await getCollection("posts");
         </p>
 
         <p class="leading-loose">
-          On the side, I maintain 10+ open source
-          projects with 100k+ total downloads. My biggest project has been
+          On the side, I maintain a few open source projects with a total of
+          100k+ downloads. My biggest project has been
           <Link
             href="https://github.com/guildedjs/guilded.js"
             className="text-yellow-400 hover:underline"
             text="Guilded.js"
-          />, used to build 1k+ bots for Guilded.gg, making it the most
-          popular library on the platform.
+          />, used to build over a thousand bots for Guilded.gg, making it the
+          most popular library on the platform.
         </p>
 
         <div class="flex flex-row gap-2">
