moving things around

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,8 +81,7 @@ const allPosts = await getCollection("posts");
             href={colors.yoki.url}
             className={colors.yoki.color}
             text="Yoki Labs"
-          />, building moderation bots keeping 200k+ users safe. I'm also a
-          Teaching & Research Assistant at
+          /> (200k+ users). I'm also a Teaching & Research Assistant at
           <Link
             text="University at Buffalo"
             className={colors.ubuffalo.color}
@@ -101,14 +100,12 @@ const allPosts = await getCollection("posts");
         </p>
 
         <p class="leading-loose">
-          On the side, I maintain a few open source projects with a total of
-          100k+ downloads. My biggest project has been
+          On the side, I maintain
           <Link
             href="https://github.com/guildedjs/guilded.js"
             className="text-yellow-400 hover:underline"
             text="Guilded.js"
-          />, used to build over a thousand bots for Guilded.gg, making it the
-          most popular library on the platform.
+          /> (100k+ downloads), among other projects on my GitHub.
         </p>
 
         <div class="flex flex-row gap-2">
