chore: put some metrics

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,7 +86,7 @@ const allPosts = await getCollection("posts");
             text="University at Buffalo"
             className={colors.ubuffalo.color}
             href={colors.ubuffalo.url}
-          />. Previously a Software Engineer Intern at
+          /> (3 courses, 600+ students). Previously a Software Engineer Intern at
           <Link
             href={colors.mirage.url}
             className={colors.mirage.color}
@@ -96,7 +96,7 @@ const allPosts = await getCollection("posts");
             href={colors.fiveable.url}
             className={colors.fiveable.color}
             text="Fiveable"
-          />.
+          /> (2x).
         </p>
 
         <p class="leading-loose">
